--- a/index.html
+++ b/index.html
@@ -161,21 +161,21 @@
             </p>
           </div>
           <div class="project-img">
-            <img src="./img/img9.jpg" alt="img">
+            <img src="./img/s-track-ke.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
             <h1>Project 2</h1>
-            <h2>School advertising site</h2>
-            <p>I made UI high fidelity prototypes for a high school advertising website.I incorporated Figma for the
-              designing.</p>
+            <h2>A-search</h2>
+            <p>This was UI high fidelity prototypes for a high school advertising website that I did alongside some of my friends.We incorporated the use of Figma for the
+              designing. This project has not yet been produced although plans are underway</p>
             <p style="text-align: center;">
               <a href="https://www.figma.com/proto/qKpx8lplwRmxtPQ3A9a2Ef/School-advert?node-id=0%3A1" type="button"
                 class="cta">FIGMA</a>
           </div>
           <div class="project-img">
-            <img src="./img/img10.jpg" alt="img">
+            <img src="./img/A-search.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -189,7 +189,7 @@
               <a href="https://github.com/alvnka/eventit" type="button" class="cta">GITHUB</a>
           </div>
           <div class="project-img">
-            <img src="./img/img11.jpg" alt="img">
+            <img src="./img/event_it.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -198,10 +198,10 @@
             <h2>PHP Voting system</h2>
             <p>Using Html,Css and PHP i developed a simple Voting system that allows users to register and vote.</p>
             <p style="text-align: center;">
-              <a href="" type="button" class="cta">GITHUB</a>
+              <a href="https://github.com/alvnka/Simple_voting_system" type="button" class="cta">GITHUB</a>
           </div>
           <div class="project-img">
-            <img src="./img/img12.jpg" alt="img">
+            <img src="./img/Voting_system.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -217,7 +217,7 @@
               <a href="https://github.com/alvnka/alx-higher_level_programming" type="button" class="cta">HIGH-LEVEL</a>
           </div>
           <div class="project-img">
-            <img src="./img/img12.jpg" alt="img">
+            <img src="./img/ALX.webp" alt="ALX africa">
           </div>
         </div>
       </div>
