--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/w3.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="./img/favicon.png">
   <title>Alvin Ndung'u</title>
 </head>
 
